--- a/_layouts/ko-KR/basic.html
+++ b/_layouts/ko-KR/basic.html
@@ -14,6 +14,8 @@
   </head>
 
   <body class="container">
+    <p style="background-color:red;color:white;line-height:1;padding:0.5em 0;margin:-20px 0 0 0;text-align:center">이 웹사이트는 한국어 번역을 준비하기 위한 곳으로 <a href="https://www.rust-lang.org/" style="color:white!important;text-decoration:underline">공식 Rust 웹사이트</a>가 <strong>아닙니다</strong>!</p>
+
     <a href="https://github.com/rust-lang/rust">
       <img class="ribbon" style="display: none" src="/logos/forkme.png" alt="GitHub에서 포크" width="298" height="298">
     </a>
