--- a/_layouts/pt-BR/basic.html
+++ b/_layouts/pt-BR/basic.html
@@ -14,6 +14,8 @@
   </head>
 
   <body class="container">
+    <p style="background-color:red;color:white;line-height:1;padding:0.5em 0;margin:-20px 0 0 0;text-align:center">This website is for preparing the Korean translation and should <strong>NOT</strong> confused with <a href="https://www.rust-lang.org/" style="color:white!important;text-decoration:underline">the Official Rust Website</a>!</p>
+
     <a href="https://github.com/rust-lang/rust">
       <img class="ribbon" style="display: none" src="/logos/forkme.png" alt="Fork me on GitHub" width="298" height="298">
     </a>
