Synchronized to commit fe320aeb15ea5a56fcea7373e85b451583976399.
Also made the team translation more managable.

--- a/_layouts/ko-KR/basic.html
+++ b/_layouts/ko-KR/basic.html
@@ -21,20 +21,30 @@
     <header>
       <ul class="row menu">
 	<li class="col-xs-12 col-md-2">
-          <a href="/index.html">
+          <a href="/ko-KR/index.html">
             <img class="img-responsive" src="/logos/rust-logo-blk.svg" onerror="this.src='/logos/rust-logo-256x256-blk.png'" height="128" width="128" alt="Rust 로고" />
           </a>
 	</li>
 	<li class="col-xs-12 col-md-10 menu">
-	  <h2><a href="/documentation.html">문서</a></h2>
-	  <h2><a href="/community.html">커뮤니티</a></h2>
-	  <h2><a href="/downloads.html">다운로드</a></h2>
-	  <h2><a href="/contribute.html">기여하기</a></h2>
+	  <h2><a href="/ko-KR/documentation.html">문서</a></h2>
+	  <h2><a href="/ko-KR/community.html">커뮤니티</a></h2>
+	  <h2><a href="/ko-KR/downloads.html">다운로드</a></h2>
+	  <h2><a href="/ko-KR/contribute.html">기여하기</a></h2>
 	</li>
       </ul>
     </header>
 
     {{ content }}
+
+    <footer>
+      <p>이 사이트를 다른 언어로 보기:
+        <a href="/en-US/">English</a>,
+        <a href="/pt-BR/">Português</a>,
+        <a href="/ru-RU/">Русский</a>,
+        <a href="/zh-CN/">简体中文</a>,
+        <a href="/fr-FR/">Français</a>
+      </p>
+    </footer>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
